# thorly-desktop

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
scripts/: build-icon-source.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
