[package]
name = "doneby-desktop"
version = "0.1.2"
description = "doneby.io Desktop-App"
authors = ["TH Consulting GmbH <kontakt@thconsulting.dev>"]
license = "Proprietary"
repository = "https://github.com/torbenhietel/doneby-desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "doneby_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Binary heisst "doneby" (nicht "doneby-desktop") damit Asset-Filenames
# sauber sind und der Install-Pfad konsistent mit dem Brand bleibt.
[[bin]]
name = "doneby"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
