[package]
name = "thorly-desktop"
version = "0.2.0"
description = "thorly.io Desktop-App"
authors = ["TH Consulting GmbH <kontakt@thconsulting.dev>"]
license = "Proprietary"
repository = "https://github.com/torbenhietel/thorly-desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "thorly_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Binary heisst "thorly" (nicht "thorly-desktop") damit Asset-Filenames
# sauber sind und der Install-Pfad konsistent mit dem Brand bleibt.
[[bin]]
name = "thorly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
